impl detail screen, webview screen, language changing feature

--- a/app/src/main/res/layout/item_attraction_list.xml
+++ b/app/src/main/res/layout/item_attraction_list.xml
@@ -55,7 +55,7 @@
                 android:layout_marginTop="@dimen/margin_small"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:text="@{attraction.introduction}"
+                htmlText="@{attraction.introduction}"
                 app:layout_constraintEnd_toEndOf="@id/guideline_end"
                 app:layout_constraintStart_toStartOf="@id/tv_attraction_name"
                 app:layout_constraintTop_toBottomOf="@id/tv_attraction_name"
