--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -22,97 +22,120 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/toolbar"
-                style="@style/Toolbar"
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/collapsingToolbarLayout"
+                style="?attr/collapsingToolbarLayoutLargeStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:navigationIcon="@drawable/ic_arrow_back"
-                app:titleTextAppearance="@style/ToolbarTextAppearanceNormal" />
+                android:layout_height="250dp"
+                app:collapsedTitleTextAppearance="@style/TextViewHeadline6"
+                app:expandedTitleMarginBottom="24dp"
+                app:expandedTitleMarginEnd="24dp"
+                app:expandedTitleMarginStart="24dp"
+                app:expandedTitleTextAppearance="@style/TextViewHeadline4"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap|enterAlwaysCollapsed">
 
-            <ImageView
-                android:id="@+id/iv_attraction"
-                attractionImage="@{attraction}"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop" />
+                <androidx.viewpager.widget.ViewPager
+                    android:id="@+id/images_viewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_collapseMode="parallax" />
+
+                <me.relex.circleindicator.CircleIndicator
+                    android:id="@+id/indicator"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_gravity="top"/>
+
+                <com.google.android.material.appbar.MaterialToolbar
+                    android:id="@+id/toolbar"
+                    style="@style/Toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?actionBarSize"
+                    app:layout_collapseMode="pin"
+                    app:navigationIcon="@drawable/ic_arrow_back"
+                    app:titleTextAppearance="@style/ToolbarTextAppearanceNormal"
+                    tools:title="Toolbar title" />
+
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/margin_small"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="@dimen/margin_small">
+
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     htmlText="@{attraction.name}"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:textAppearance="@style/TextViewHeadline5"
-                    tools:text="@tools:sample/lorem"/>
+                    tools:text="@tools:sample/lorem" />
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_small"
                     htmlText="@{attraction.introduction}"
-                    tools:text="@tools:sample/lorem"/>
-
-                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextViewHeadline6"
                     android:layout_marginTop="@dimen/margin_small"
-                    android:text="@string/txt_open_time"/>
+                    tools:text="@tools:sample/lorem" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_small"
+                    android:text="@string/txt_open_time"
+                    android:textAppearance="@style/TextViewHeadline6" />
+
+                <TextView
                     htmlText="@{attraction.openTime}"
-                    tools:text="@tools:sample/lorem"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="@tools:sample/lorem" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextViewHeadline6"
                     android:layout_marginTop="@dimen/margin_small"
-                    android:text="@string/txt_address"/>
+                    android:text="@string/txt_address"
+                    android:textAppearance="@style/TextViewHeadline6" />
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     htmlText="@{attraction.address}"
-                    tools:text="@tools:sample/lorem"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="@tools:sample/lorem" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextViewSubtitle1"
                     android:layout_marginTop="@dimen/margin_small"
-                    android:text="@string/txt_last_updated_time"/>
+                    android:text="@string/txt_last_updated_time"
+                    android:textAppearance="@style/TextViewSubtitle1" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@{attraction.modified}"
-                    tools:text="@tools:sample/lorem"/>
+                    tools:text="@tools:sample/lorem" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextViewHeadline6"
                     android:layout_marginTop="@dimen/margin_small"
-                    android:text="@string/txt_official_site"/>
+                    android:text="@string/txt_official_site"
+                    android:textAppearance="@style/TextViewHeadline6" />
 
                 <TextView
                     android:id="@+id/tv_official_site"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@{attraction.officialSite}"
-                    tools:text="@tools:sample/lorem"/>
+                    tools:text="@tools:sample/lorem" />
             </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
